:construction: nova versão dos icones

--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
     <div class="ft-ass">
         <div class="row">
             <div class="col-4">
-                jefte
+                <div class="thumb">
+                    <img src="https://www.fulltimesolucoes.com.br/imagens/logo.png"/>
+                </div>
             </div>
             <div class="col-8">
-                jefte
+                <div class="header">
+                    <h2>Eduard Carvalho</h2>
+                    <h4>C.O.O</h4>
+                </div>
+                <div class="content">
+                    <p>Telefone</p>
+                    <p>ddd</p>
+                    <p>ddd</p>
+                    <p>dddd</p>
+                </div>
             </div>
         </div>
     </div>
