--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assinatura fulltime</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
     <style>
-        @import url('https://w-tech.github.io/ft-assinatura/css/style.css');
+        *{box-sizing:border-box}body{margin:0}.ft-ass{background-image:url(https://w-techn.github.io/ft-assinatura/images/Fundo-com-inha-azul.svg);background-position:left top;background-repeat:no-repeat,repeat;padding:5px;width:800px;height:220px}.row:after{content:"";display:table;clear:both}.col-4{float:left;width:33.33%;padding:15px}.col-8{float:left;width:66.66%;padding:15px;color:#f0f8ff}.ft-ass .col-4 .thumb img{padding-top:20px;padding-left:10px;width:180px;height:auto}.col-8 .header{padding-left:45px}.header h2{margin-top:7px;margin-bottom:0}.header h4{margin-top:5px}.col-8 .content{padding-top:20px;padding-left:45px}.content p{margin-top:2px;margin-bottom:1px;font-size:12px}.content p .icon-tel{background-image:url(https://w-techn.github.io/ft-assinatura/images/icon-telefone.svg);background-size:100%;background-repeat:no-repeat;width:12px;height:12px;margin-right:10px;display:block;float:left}.content p .icon-site{background-image:url(https://w-techn.github.io/ft-assinatura/images/icon-site.svg);background-size:100%;background-repeat:no-repeat;width:12px;height:12px;margin-right:10px;display:block;float:left}.content p .icon-mail{background-image:url(https://w-techn.github.io/ft-assinatura/images/icon-mail.svg);background-size:100%;background-repeat:no-repeat;width:12px;height:12px;margin-right:10px;display:block;float:left}.content p .icon-loc{background-image:url(https://w-techn.github.io/ft-assinatura/images/icon-localiza.svg);background-size:100%;background-repeat:no-repeat;width:12px;height:12px;margin-right:10px;display:block;float:left}
     </style>
     <div class="ft-ass">
         <div class="row">
@@ -24,10 +24,10 @@
                     <h4>C.O.O</h4>
                 </div>
                 <div class="content">
-                    <p>Telefone</p>
-                    <p>ddd</p>
-                    <p>ddd</p>
-                    <p>dddd</p>
+                    <p><i class="icon-tel"></i> 11 4004 4004 / 11 99999 9999</p>
+                    <p><i class="icon-mail"></i>ddddddd@dddddd.ddd.dd</p>
+                    <p><i class="icon-site"></i>wwww.ddddd.ddd.dd</p>
+                    <p><i class="icon-loc"></i>Rua da Consolação, 247</p>
                 </div>
             </div>
         </div>
